app/css/styles.css
@font-face {
    font-family: "Segoe Pro Black";
    src: url("../resources/font/SegoePro-Black.woff") format("woff");
}

* {
    box-sizing: border-box;
}

html {
    background-color: #f9f9f9;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 75vh;
    padding: 0;
    margin: 0;
    font-size: 14px;
    line-height: 1.5;
    font-family: "Segoe", sans-serif;
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

h1 {
    font-size: 32px;
    line-height: 1;
    padding: 30px 0 0 0;
    margin: 0 0 32px 0;
    color: #333333;
    opacity: 70%;
    font-family: "Segoe", sans-serif;
    text-align: center;
}

h2 {
    font-size: 18px;
    line-height: 1;
    padding: 16px 0 0 0;
    margin: 0;
    color: #333333;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

a {
    text-decoration: none;
}

a:hover {
    font-weight: 600;
}

.content-wrap {
    margin: 0 auto;
}

.search-container {
    margin-bottom: 128px;
}

.card-grid {
    display: grid;
    justify-items: center;
    gap: 8px;
    grid-template-columns: repeat(9, 1fr);
    transition: padding 0.3s ease;
    max-width: 1200px;
    margin: 0 auto;
}

.card-image {
    width: auto;
    height: 96px;
    border-radius: 16px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: width 0.3s ease, height 0.3s ease;
}

.card-image:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
}

/* Search Bar */
form {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 24px;
    padding: 12px 24px;
    box-shadow: 0 2px 8px rgba(0,0,0,0.06);
    background-color: #fff;
    width: 35vw;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;
    transition: width 0.3s ease;
}

form input[type="text"] {
    flex: 1;
    font-size: 14px;
    border: none;
    width: 100%;
    border-radius: 32px;
    padding: 8px 16px;
    margin-right: 8px;
    outline: none;
    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
}

form button {
    border: none;
    border-radius: 16px;
    padding: 8px 16px;
    cursor: pointer;
    font-weight: 500;
    background-color: white;
}

@media screen and (max-width: 1000px) {
    .card-grid {
        grid-template-columns: repeat(6, 1fr);
    }

    form {
        display: flex;
        width: 75%;
        margin-bottom: 16px;
    }

    form input[type="text"] {
        flex: 1;
        width: auto;
        min-width: 0;
    }

    form button {
        flex-shrink: 0;
    }
}

@media screen and (max-width: 700px) {
    h1 {
        font-size: 24px;
    }

    .card-grid {
        grid-template-columns: repeat(3, 1fr);
    }

    .card-image {
        width: auto;
        height: 96px;
    }

    form {
        display: flex;
        width: 90%;
        margin-bottom: 16px;
    }

    form input[type="text"] {
        flex: 1;
        width: auto;
        min-width: 0;
    }

    form button {
        flex-shrink: 0;
    }
}

/* Dark Theme */
@media (prefers-color-scheme: dark) {
    h1 {
        color: #fff;
        opacity: 0.95;
    }

    html {
        background-color: #222;
    }

    input, button {
        color: #e0e0e0;
        border-color: #444;
    }
}

